--- a/Lec6_cmm06.Rmd
+++ b/Lec6_cmm06.Rmd
@@ -82,13 +82,13 @@ rename(gapminder, cont = continent)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year)
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year))
 ```
 
 3. Order by year, then by life expectancy.
@@ -110,15 +110,21 @@ Here I want to combine `select()` Task 1 with `arrange()` Task 3.
 This is how I could do it by *nesting* the two function calls:
 
 ```{r nesting functions example, eval = F}
-# Nesting function calls can be hard to read
+# Nesting function calls can be hard to read (below)
+#select gives the data frame and then the next function indicates how it will be arranged 
+
 arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
 ```
 
-Now using with pipes:
+Now using with pipes(write out as you want to happen:
 
 ```{r}
-# alter the below to include 2 "pipes"
+# alter the below to include 2 "pipes" property of being self documenting
 arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+gapminder %>% 
+  select(year, lifeExp, country) %>% 
+  arrange(year, lifeExp)
+# arrange determines how the data is sorted, but not the order that the columns appear... would have to change that in select? 
 ```
 
 # Resume lecture 
