Lec6_cm006 Rmd, md and html

--- a/Lec6_cmm06.Rmd
+++ b/Lec6_cmm06.Rmd
@@ -137,21 +137,30 @@ Return to guide at section 6.7.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000)
 ```
 
 2. Your turn: of those rows filtered from step 1., only take data from Asia.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000) %>% 
+  filter(continent == 'Asia')
+# use pipe from first line 
+# need quotes ' ' 
+
+gapminder %>%
+  filter(pop > 100000000 & continent == 'Asia')
 ```
 
 3. Repeat 2, but take data from countries Brazil, and China. 
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000, 
+         country == 'Brazil' | country == 'China') 
+# ' ___ ' !!!! 
+
 ```
 
 ## `mutate()` (10 min)
@@ -163,7 +172,13 @@ Let's get:
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(gdpbill = gdpPercap*pop/1000000000) %>% 
+  round(digits = 2)
+# thiink that some brackets are missing 
+
+# in order to store 
+# New_tabl <- gampinder %>% and then manipulate further 
+# 
 ```
 
 Notice the backwards compatibility! No need for loops!
@@ -172,7 +187,8 @@ Try the same thing, but with `transmute` (drops all other variables).
 
 ```{r}
 gapminder %>%
-  transmute(FILL_THIS_IN)
+  transmute(gdpbill = round(gdpPercap*pop/1000000000))  
+# shortcut to doing select and then mutate 
 ```
 
 The `if_else` function is useful for changing certain elements in a data frame.
@@ -181,12 +197,13 @@ Example: Suppose Canada's 1952 life expectancy was mistakenly entered as 68.8 in
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(lifeExp = if_else(country == 'Canada' & year == 1952, 70, lifeExp))
 ```
 
 Your turn: Make a new column called `cc` that pastes the country name followed by the continent, separated by a comma. (Hint: use the `paste` function with the `sep=", "` argument).
 
 ```{r}
+
 ```
 
 These functions we've seen are called __vectorized functions__.
