--- a/cm009 - Pivoting.Rmd
+++ b/cm009 - Pivoting.Rmd
@@ -35,7 +35,9 @@ lotr
 (lotr_wide <- lotr %>% 
   pivot_wider(id_cols = c(-Race, -Words), # not wanting race or a words column as an identifer
               names_from = Race, 
-              values_from = Words))
+              values_from = Words)) 
+
+# could then rearrange the order of things using arrange()  
 ```
 
 3. Re-lengthen the wide LOTR data from Question 2 above.
@@ -97,7 +99,7 @@ guest_long %>%
   pivot_wider(id_cols = c(part, name), 
               names_from = event, 
               names_sep   = "_", 
-              values_from = c(meal, attendance)
+              values_from = c(meal, attendance))
 ```
 
 6. You also have a list of emails for each party, in this worksheet under the variable `email`. Change this so that each person gets their own row. Use `tidyr::separate_rows()`
@@ -128,7 +130,7 @@ n <- 100
 n <- 100
 mu <- c(-5, 0, 5)
 sd <- c(1, 3, 10)
-FILL_THIS_IN(mu = mu, sd = sd) %>% 
+(mu = mu, sd = sd) %>% 
   group_by_all() %>% 
   mutate(z = list(rnorm(n, mu, sd))) %>% 
   FILL_THIS_IN
